# transcoder-rs

./: .env.sample  .gitignore  Cargo.toml  back.sh  gen_thumb.sh  generator.ts  installed.txt  test.sh
src/: main.rs
src/mongo/: helpers.rs  mod.rs  models.rs
src/msg_parser/: mod.rs
src/utils/: builder.rs  mod.rs  thumb_gen_builder.rs  verify.rs
